k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend
  labels:
    app: springboot-backend
spec:
  selector:
    matchLabels:
      app: springboot-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-backend
    spec:
      containers:
        - name: springboot-backend
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_17812674293c
          ports:
            - containerPort: 8080
